# open

./: README.md  meson.build
src/: app_appimage_search.c  app_appimage_search.h  app_desktop_search.c  app_desktop_search.h  app_flatpak_search.c  app_flatpak_search.h  app_search.c  app_search.h  main.c  meson.build  utils.c  utils.h
